# marchland

./: .gitignore  .pre-commit-config.yaml  00-BIBLE.md  CLAUDE.md  MILESTONE-M7-meaning-layer.md  Makefile  PLAYTEST.md  README.md  cannae_216bc.json  marchland-officer-battery-spec.md  pyproject.toml
battery/: ci.py  officer_probes.py  runner.py  targets.py
code/: march_model.py  marchland_toy.py  run.py  scenarios.py  siege_clock.py
core/: belief_db.py  chain.py  commission.py  constants.py  lattice.py  march.py  meaning.py  missions.py  officer.py  sentiment.py  siege.py  stations.py  trace.py
docs/: 01-essay-the-peasants-who-wouldnt-run.md  MILESTONE-M7-revised-scene-time.md  marchland-addendum-A-resolver.md  marchland-addendum-B-statless.md  marchland-addendum-C-walkthrough.md  marchland-addendum-D-interrogation.md  marchland-addendum-E-adjudication.md  marchland-addendum-F-the-build.md  marchland-addendum-G-player-walkthrough.md  marchland-addendum-H-three-rooms.md  marchland-addendum-I-chroniclers-eye.md  marchland-addendum-J-the-commission.md  marchland-addendum-K-the-chain.md  marchland-addendum-L-the-missing-day.md  marchland-addendum-M-loops-and-judgment.md  marchland-addendum-N-seven-players.md  marchland-addendum-O-progress-without-the-ladder.md  marchland-addendum-P-theory-of-history.md  marchland-addendum-Q-begin-in-the-wreckage.md  marchland-addendum-R-answering-the-review.md  marchland-addendum-S-the-march.md  marchland-addendum-T-three-loops.md  marchland-addendum-U-table-and-window.md  marchland-addendum-V.md  marchland-addendum-W.md  marchland-addendum-X-meaning-and-morale.md  marchland-addendum-Y-scenes-and-the-order-in-flight.md  marchland-audit-spec-v2.md  marchland-audit-spec.md  marchland-design-doc.md  marchland-presentation-redesign-spec.md  marchland-renpy-integration.md  marchland-ui-spec.html  marchland-ui-spec.md  marchland-vertical-slice.md  renpy-debug-spec.md
results/: aggregate.json  assault_results.json  calibration_regrade.json  issues_ux.md  playtest_m6.md  res_agincourt.json  (+21 more)
(+74 files in other folders)
