[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "marchland"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pytest",
    "hypothesis",
    "rich",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "battery*", "clients*", "tools*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
