[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "marchland"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
    "numpy==2.4.6",   # exact: Generator streams not guaranteed across versions (NEP 19)
    "rich~=15.0",     # rendering only; never affects sim outcomes — compatible-release pin is fine
    "pytest",
    "hypothesis",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "battery*", "clients*", "tools*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
