[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "marchland"
version = "0.1.1"
requires-python = "==3.12.*"  # Model A (Ren'Py 8.5.3 bundled interpreter); was ==3.14.*
                              # Re-bless GOLDEN_HASH + CHAIN_GOLDEN_HASH after switching:
                              #   python3 -c "from tests.test_reproducibility import *; ..."
                              # (see regeneration commands in tests/test_reproducibility.py)
dependencies = [
    "numpy>=2.4.6",   # floor pin: CI matrix controls exact version; use 2.4.6 locally for reproducible golden hashes (NEP 19)
    "rich~=15.0",     # rendering only; never affects sim outcomes — compatible-release pin is fine
    "pytest",
    "hypothesis",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "battery*", "clients*", "tools*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
